Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-90817

Quick3D Model bounds not set in an imported scene

XMLWordPrintable

    • 3
    • 2e979e81b64d961b947ea66fd4dd70526ed08261 (qt/tqtc-qtquick3d/5.15)

      When setting an importScene to a View3D none of the models in the imported scene get their bounds set. The bounds remain at 0,0,0 at all times. On the other hand if the models are children of the View3D the bounds would be set to non zero.

      Steps to reproduce the problem:

      1. run the attached project
      2. click on the screen to print out the teapot bounds
        => the bounds will not change from 0,0,0

        1. qtbug90817.zip
          29 kB
          Miika Pernu
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            tvete Paul Olav Tvete
            miikapernu Miika Pernu
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes