Fix bounds for imported objects

updateBoundingBoxes needs the spatial node. That is set in updateDirtyNodes.
For imported scenes, the order of the functions was opposite from the
normal case.

The bug is not reproducible with Qt 6, but this fix still makes sense.
Manually cherry-picked from 5.15.

Task-number: QTBUG-90817
Change-Id: I496b67bd032198e5e62322b09460a21f1efcab02
Reviewed-by: Jonas Karlsson <jonas.karlsson@qt.io>
Reviewed-by: Andy Nichols <andy.nichols@qt.io>
(cherry picked from commit 1980285a7443fb81abd23cd15dfe12cae1b1ebfe)